[tool.poetry]
name = "cppsmith.github.io"
version = "0.1.0"
description = "Sphinx pages generator for CPPSmith blog"
authors = ["Eugene Kuznetsov <eugene.kuznetsov.de@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
Sphinx = "5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
