[tool.poetry]
name = "cppsmith.github.io"
version = "0.1.0"
description = "Sphinx pages generator for cppsmith blog"
authors = ["Eugene Kuznetsov <eugene.kuznetsov.de@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<=3.9.x"

[tool.poetry.dev-dependencies]
Sphinx = "4.5.0"
furo = "2022.6.21"
sphinxext-opengraph = "0.6.3"
sphinx-inline-tabs = "2022.1.2b11"
sphinx-copybutton = "0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
